--- a/l10n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-04-26 22:09+0900\n"
+"PO-Revision-Date: 2022-02-18 10:53+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -55,7 +55,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:21
 msgid "The application built in this guide is quite simple: the user can add elements in a list using a form and the list is updated."
-msgstr "このガイドで構築されるアプリケーションは非常にシンプルです:ユーザーはフォームを使用してリストに要素を追加することができ、リストは更新されます。"
+msgstr "このガイドで構築されるアプリケーションは非常にシンプルです: ユーザーはフォームを使用してリストに要素を追加することができ、リストは更新されます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:23
@@ -76,7 +76,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:30
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次の節で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:32
@@ -101,9 +101,8 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:45
-#, fuzzy
 msgid "This command generates a Maven structure importing the RESTEasy Reactive Jackson and MongoDB Client extensions.  After this, the `quarkus-mongodb-client` extension has been added to your build file."
-msgstr "このコマンドは、RESTEasy Reactive JacksonとMongoDB ClientエクステンションをインポートするMaven構造を生成します。この後、 `quarkus-mongodb-client` エクステンションがビルドファイルに追加されています。"
+msgstr "このコマンドは、RESTEasy Reactive JacksonとMongoDB ClientエクステンションをインポートするMaven構造を生成します。その後、 `quarkus-mongodb-client` エクステンションがビルドファイルに追加されます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:48
@@ -394,7 +393,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:192
-#, fuzzy
 msgid "Now, create the `org.acme.mongodb.FruitResource` class as follows:"
 msgstr "では、次のように `org.acme.mongodb.FruitResource` クラスを作成します。"
 
@@ -450,7 +448,7 @@ msgstr "MongoDBデータベースの設定"
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:217
 msgid "The main property to configure is the URL to access to MongoDB, almost all configuration can be included in the connection URI so we advise you to do so, you can find more information in the MongoDB documentation: https://docs.mongodb.com/manual/reference/connection-string/"
-msgstr "設定する主なプロパティーは MongoDB にアクセスするための URL です。ほとんどすべての設定は接続 URI に含めることができるので、そうすることをお勧めします : https://docs.mongodb.com/manual/reference/connection-string/"
+msgstr "設定する主なプロパティーはMongoDBにアクセスするためのURLです。ほとんどすべての設定は接続URIに含めることができるので、そうすることをお勧めします。 MongoDBドキュメントで、さらに情報を得ることができます。 https://docs.mongodb.com/manual/reference/connection-string/"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:219
@@ -485,25 +483,22 @@ msgstr "その他の設定プロパティーが必要な場合は、このガイ
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:238
-#, fuzzy
 msgid "By default Quarkus will restrict the use of JNDI within an application, as a precaution to try and mitigate any future vulnerabilities similar to log4shell.  Because the `mongo+srv` protocol often used to connect to MongoDB requires JNDI, this protection is automatically disabled when using the MongoDB client extension."
 msgstr "デフォルトでは、Quarkusはアプリケーション内でのJNDIの使用を制限します。これは、log4shellのような将来的な脆弱性を軽減するための予防策です。MongoDBへの接続によく使われる `mongo+srv` プロトコルはJNDIを必要とするため、MongoDBクライアントエクステンションを使用すると、この保護機能は自動的に無効になります。"
 
 #. type: Title ===
 #: upstream/_guides/mongodb.adoc:240
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
 msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:245
-#, fuzzy
 msgid "Quarkus supports a feature called Dev Services that allows you to create various datasources without any config. In the case of MongoDB this support extends to the default MongoDB connection.  What that means practically, is that if you have not configured `quarkus.mongodb.connection-string` Quarkus will automatically start a MongoDB container when running tests or dev-mode, and automatically configure the connection."
 msgstr "QuarkusはDev Servicesと呼ばれる機能をサポートしており、設定なしで様々なデータソースを作成することができます。MongoDBの場合、このサポートはデフォルトのMongoDB接続にまで及びます。実際には、 `quarkus.mongodb.connection-string` を設定していない場合、Quarkusはテストやdev-modeの実行時に自動的にMongoDBコンテナを起動し、接続を自動的に設定します。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:248
-#, fuzzy
 msgid "When running the production version of the application, the MongoDB connection need to be configured as normal, so if you want to include a production database config in your `application.properties` and continue to use Dev Services we recommend that you use the `%prod.` profile to define your MongoDB settings."
 msgstr "本番環境のアプリケーションを実行する場合、MongoDBの接続は通常通りに設定する必要があります。本番環境のデータベースの設定を `application.properties` に含めてDev Servicesを継続して使用する場合は、 `%prod.` プロファイルを使用してMongoDBの設定を定義することをお勧めします。"
 
