Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
@@ -606,7 +606,7 @@ msgstr ""
 #: upstream/_versions/main/guides/elasticsearch.adoc:329
 #, no-wrap
 msgid "Running the application"
-msgstr ""
+msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch.adoc:332
