--- a/l10n/po/ja_JP/_versions/main/guides/performance-measure.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/performance-measure.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2022-02-19 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -110,7 +110,9 @@ msgstr " -XX:NativeMemoryTracking=[off | summary | detail] <1>\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/performance-measure.adoc:40
-msgid "NOTE: this feature will add cause an approximately 5-10% performance overhead"
+#, fuzzy
+#| msgid "NOTE: this feature will add cause an approximately 5-10% performance overhead"
+msgid "NOTE: this feature will add a 5-10% performance overhead"
 msgstr "留意事項: この機能は、約 5-10% のパフォーマンスオーバーヘッドを発生させます。"
 
 #. type: Plain text
