Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/logging.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/logging.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-22 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1217,7 +1217,9 @@ msgstr "コンソールログハンドラーはデフォルトで有効になっ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/logging.adoc:317
-msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.console[the Console Logging configuration reference]."
+#, fuzzy
+#| msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.console[the Console Logging configuration reference]."
+msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.console-console-logging[the Console Logging configuration reference]."
 msgstr "その構成オプションの詳細については、「 link:#quarkus-log-logging-log-config_quarkus.log.console[コンソール ロギング」の構成リファレンス] を参照してください。"
 
 #. type: Title ===
@@ -1233,7 +1235,9 @@ msgstr "ファイルログハンドラーはデフォルトでは無効になっ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/logging.adoc:324
-msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.file[the File Logging configuration reference]."
+#, fuzzy
+#| msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.file[the File Logging configuration reference]."
+msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.file-file-logging[the File Logging configuration reference]."
 msgstr "その構成オプションの詳細については、「 link:#quarkus-log-logging-log-config_quarkus.log.file[ファイル ロギング」の構成リファレンス] を参照してください。"
 
 #. type: Title ===
@@ -1254,7 +1258,9 @@ msgstr "syslog ハンドラーは、すべてのログイベントを syslog サ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/logging.adoc:333
-msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.syslog[the Syslog Logging configuration reference]."
+#, fuzzy
+#| msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.syslog[the Syslog Logging configuration reference]."
+msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.syslog-syslog-logging[the Syslog Logging configuration reference]."
 msgstr "その構成オプションの詳細については、「 link:#quarkus-log-logging-log-config_quarkus.log.syslog[Syslog Logging」の構成リファレンス] を参照してください。"
 
 #. type: Title ==
