Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
@@ -3403,22 +3403,22 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1298
 msgid "`quarkus-jdbc-mariadb`"
-msgstr ""
+msgstr "`quarkus-jdbc-mariadb`"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1299
 msgid "`quarkus-jdbc-mssql`"
-msgstr ""
+msgstr "`quarkus-jdbc-mssql`"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1300
 msgid "`quarkus-jdbc-mysql`"
-msgstr ""
+msgstr "`quarkus-jdbc-mysql`"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1301
 msgid "`quarkus-jdbc-postgresql`"
-msgstr ""
+msgstr "`quarkus-jdbc-postgresql`"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1302
@@ -3428,12 +3428,12 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1304
 msgid "`quarkus-kafka-client`"
-msgstr ""
+msgstr "`quarkus-kafka-client`"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1305
 msgid "`quarkus-smallrye-reactive-messaging-kafka`"
-msgstr ""
+msgstr "`quarkus-smallrye-reactive-messaging-kafka`"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1308
