Update .po files

--- a/l10n/po/ja_JP/_guides/logging.adoc.po
+++ b/l10n/po/ja_JP/_guides/logging.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-02-22 21:13+0000\n"
 "PO-Revision-Date: 2022-02-04 14:33+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -1202,7 +1202,9 @@ msgstr "コンソールログハンドラーはデフォルトで有効になっ
 
 #. type: Plain text
 #: upstream/_guides/logging.adoc:317
-msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.console[the Console Logging configuration reference]."
+#, fuzzy
+#| msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.console[the Console Logging configuration reference]."
+msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.console-console-logging[the Console Logging configuration reference]."
 msgstr "その構成オプションの詳細については、「 link:#quarkus-log-logging-log-config_quarkus.log.console[コンソール ロギング」の構成リファレンス] を参照してください。"
 
 #. type: Title ===
@@ -1218,7 +1220,9 @@ msgstr "ファイルログハンドラーはデフォルトでは無効になっ
 
 #. type: Plain text
 #: upstream/_guides/logging.adoc:324
-msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.file[the File Logging configuration reference]."
+#, fuzzy
+#| msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.file[the File Logging configuration reference]."
+msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.file-file-logging[the File Logging configuration reference]."
 msgstr "その構成オプションの詳細については、「 link:#quarkus-log-logging-log-config_quarkus.log.file[ファイル ロギング」の構成リファレンス] を参照してください。"
 
 #. type: Title ===
@@ -1239,7 +1243,9 @@ msgstr "syslog ハンドラーは、すべてのログイベントを syslog サ
 
 #. type: Plain text
 #: upstream/_guides/logging.adoc:333
-msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.syslog[the Syslog Logging configuration reference]."
+#, fuzzy
+#| msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.syslog[the Syslog Logging configuration reference]."
+msgid "For details of its configuration options, see link:#quarkus-log-logging-log-config_quarkus.log.syslog-syslog-logging[the Syslog Logging configuration reference]."
 msgstr "その構成オプションの詳細については、「 link:#quarkus-log-logging-log-config_quarkus.log.syslog[Syslog Logging」の構成リファレンス] を参照してください。"
 
 #. type: Title ==
