--- a/l10n/po/ja_JP/_guides/lra.adoc.po
+++ b/l10n/po/ja_JP/_guides/lra.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-22 21:13+0000\n"
 "PO-Revision-Date: 2022-02-03 10:36+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -252,7 +252,7 @@ msgstr ""
 #: upstream/_guides/lra.adoc:211
 #, no-wrap
 msgid ""
-"  @LRA(LRA.Type.MANDATORY, // requires an active context before method can be executed\n"
+"  @LRA(value = LRA.Type.MANDATORY, // requires an active context before method can be executed\n"
 "       end = true) // end the LRA started by the bookTrip method\n"
 "  @Path(\"/confirm\")\n"
 "  @PUT\n"
