--- a/l10n/po/ja_JP/_guides/performance-measure.adoc.po
+++ b/l10n/po/ja_JP/_guides/performance-measure.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-22 21:13+0000\n"
 "PO-Revision-Date: 2021-03-23 13:58+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -110,7 +110,9 @@ msgstr " -XX:NativeMemoryTracking=[off | summary | detail] <1>\n"
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:40
-msgid "NOTE: this feature will add cause an approximately 5-10% performance overhead"
+#, fuzzy
+#| msgid "NOTE: this feature will add cause an approximately 5-10% performance overhead"
+msgid "NOTE: this feature will add a 5-10% performance overhead"
 msgstr "留意事項: この機能は、約 5-10% のパフォーマンスオーバーヘッドを発生させます。"
 
 #. type: Plain text
