--- a/l10n/po/ja_JP/_guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-08 17:12+0000\n"
+"POT-Creation-Date: 2022-02-22 21:13+0000\n"
 "PO-Revision-Date: 2022-02-04 15:40+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1021,30 +1021,74 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/redis.adoc:572
+#, fuzzy, no-wrap
+#| msgid "Creating Clients Programmatically"
+msgid "Providing Redis Hosts Programmatically"
+msgstr "プログラムによるクライアントの作成"
+
+#. type: Plain text
+#: upstream/_guides/redis.adoc:575
+msgid "The `RedisHostsProvider` programmatically provides redis hosts. This allows for configuration of properties like redis connection password coming from other sources."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_guides/redis.adoc:579
+msgid "This is useful as it removes the need to store sensitive data in application.properties."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/redis.adoc:593
+#, no-wrap
+msgid ""
+"@ApplicationScoped\n"
+"@Named(\"hosts-provider\") // the name of the host provider\n"
+"public class ExampleRedisHostProvider implements RedisHostsProvider {\n"
+"    @Override\n"
+"    public Set<URI> getHosts() {\n"
+"        // do stuff to get the host\n"
+"        String host = \"redis://localhost:6379/3\"\n"
+"        return Collections.singleton(URI.create(host));\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/redis.adoc:596
+msgid "The host provider can be used to configure the redis client like shown below"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/redis.adoc:599
+#, no-wrap
+msgid "quarkus.redis.hosts-provider-name=hosts-provider\n"
+msgstr ""
+
+#. type: Title ===
+#: upstream/_guides/redis.adoc:601
 #, no-wrap
 msgid "Creating Clients Programmatically"
 msgstr "プログラムによるクライアントの作成"
 
 #. type: Plain text
-#: upstream/_guides/redis.adoc:576
+#: upstream/_guides/redis.adoc:605
 #, fuzzy
 msgid "The `RedisClient` and `ReactiveRedisClient` provide factory methods to create clients programmatically.  The client to be created are configured using the usual <<config-reference,Redis configuration>>."
 msgstr "`RedisClient` と `ReactiveRedisClient` は、プログラムでクライアントを作成するためのファクトリーメソッドを提供しています。作成されるクライアントは、通常の link:#config-reference[Redisの設定]を用いて設定されます。"
 
 #. type: delimited block =
-#: upstream/_guides/redis.adoc:583
+#: upstream/_guides/redis.adoc:612
 #, fuzzy
 msgid "This is useful to create a client dynamically in a non-CDI bean e.g a xref:hibernate-orm-panache.adoc[Panache entity].  Or to create a different client when running in pub/sub mode. This mode requires two different connections because once a connection invokes a subscriber mode then it cannot be used for running other commands than the command to leave that mode."
 msgstr "これは、 link:hibernate-orm-panache.html[Panacheエンティティ]など、CDI以外のBeanで動的にクライアントを作成する場合に便利です。また、pub/subモードで実行する際に異なるクライアントを作成することもできます。このモードでは、2つの異なる接続が必要です。なぜなら、一度接続がサブスクライバーモードを呼び出すと、そのモードを終了するコマンド以外の他のコマンドを実行するために使用できないからです。"
 
 #. type: Plain text
-#: upstream/_guides/redis.adoc:586
+#: upstream/_guides/redis.adoc:615
 #, fuzzy
 msgid "The below code snippet shows how we can create dynamic clients using the configurations in <<multiple-clients-configuration>>."
 msgstr "以下のコードスニペットは、 link:#multiple-clients-configuration[[multiple-clients-configuration]]の設定を使用して動的なクライアントを作成する方法を示しています。"
 
 #. type: delimited block -
-#: upstream/_guides/redis.adoc:590
+#: upstream/_guides/redis.adoc:619
 #, no-wrap
 msgid ""
 "// creating default redis client\n"
@@ -1052,7 +1096,7 @@ msgid ""
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_guides/redis.adoc:593
+#: upstream/_guides/redis.adoc:622
 #, no-wrap
 msgid ""
 "// creating named redis client whose configuration name is \"second\"\n"
@@ -1060,7 +1104,7 @@ msgid ""
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_guides/redis.adoc:596
+#: upstream/_guides/redis.adoc:625
 #, no-wrap
 msgid ""
 "// creating a default reactive redis client\n"
@@ -1068,7 +1112,7 @@ msgid ""
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_guides/redis.adoc:599
+#: upstream/_guides/redis.adoc:628
 #, no-wrap
 msgid ""
 "// creating a named reactive redis client whose configuration name is \"second\"\n"
@@ -1076,12 +1120,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: upstream/_guides/redis.adoc:602
+#: upstream/_guides/redis.adoc:631
 msgid "Please see also <<redis-reference.adoc#custom_redis_commands,How to use custom Redis Commands>>."
 msgstr "link:redis-reference.html#custom_redis_commands[Redisのカスタムコマンドの使い方]もご参照ください。"
 
 #. type: Title ==
-#: upstream/_guides/redis.adoc:604
+#: upstream/_guides/redis.adoc:633
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
