--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-02-22 21:12+0000\n"
 "PO-Revision-Date: 2022-02-03 10:20+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -696,9 +696,127 @@ msgid "We will be asking the NVD CPE team to update the list as well as link Qua
 msgstr "NVD CPEチームには、リストの更新と、Quarkus CPE名のエントリと関連するCVEとのリンクを定期的に行うよう依頼しています。 link:https://jeremylong.github.io/DependencyCheck/dependency-check-maven/[OWASP Dependency Check Plugin]を使用していて、アプリケーションのビルド時にNVDのフィードを使用して脆弱性を検出し、誤検出が報告された場合は、 link:https://github.com/quarkusio/quarkus/issues/2611[この問題]を再度開き、詳細を提供してください。"
 
 #. type: Plain text
-#: upstream/_guides/security.adoc:278
-#, fuzzy
-msgid "Note link:https://jeremylong.github.io/DependencyCheck/dependency-check-maven/[OWASP Dependency Check Plugin] `6.2.0` or later should be used with Quarkus."
+#: upstream/_guides/security.adoc:279
+msgid "You can add `OWASP Dependency Check Plugin` to your project's `pom.xml` like this:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/security.adoc:295
+#, no-wrap
+msgid ""
+"<plugin>\n"
+"    <groupId>org.owasp</groupId>\n"
+"    <artifactId>dependency-check-maven</artifactId>\n"
+"    <version>${owasp-dependency-check-plugin.version}</version>\n"
+"    <configuration>\n"
+"        <!-- Fail only when detecting High Vulnerability issues -->\n"
+"        <failBuildOnCVSS>7</failBuildOnCVSS>\n"
+"        <suppressionFiles>\n"
+"            <suppressionFile>${project.basedir}/dependency-cpe-suppression.xml</suppressionFile>\n"
+"        </suppressionFiles>\n"
+"    </configuration>\n"
+"</plugin>\n"
+"---- \n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/security.adoc:297
+#, no-wrap
+msgid "You can change `failBuildOnCVSS` value to detect less severe issues as well.\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/security.adoc:300
+#, no-wrap
+msgid ""
+"A suppression list may vary depending on whether you'd like to keep checking the false positives to avoid missing something or not.\n"
+"For example, it can look like this:\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/security.adoc:302
+#, no-wrap
+msgid "[source,xml]\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/security.adoc:365
+#, no-wrap
+msgid ""
+"<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
+"<suppressions xmlns=\"https://jeremylong.github.io/DependencyCheck/dependency-suppression.1.2.xsd\">\n"
+"    <!--\n"
+"        This is a CPE suppression file for the maven dependency check plugin.\n"
+"        Each CPE that is found by error (false positive) needs to be suppressed for a specific jar using it's GAV.\n"
+"        See https://jeremylong.github.io/DependencyCheck/general/suppression.html\n"
+"     -->\n"
+"    <suppress>\n"
+"        <notes>\n"
+"            <![CDATA[\n"
+"                Suppress the false positive CPE for netty-tcnative-classes to netty\n"
+"            ]]>\n"
+"        </notes>\n"
+"        <gav regex=\"true\">^io\\.netty:netty-tcnative-classes.*:.*$</gav>\n"
+"        <cpe>cpe:/a:netty:netty</cpe>\n"
+"    </suppress>\n"
+"    <suppress>\n"
+"        <notes>\n"
+"            <![CDATA[\n"
+"                Suppress the false positive CPE for Quarkus Mutiny to mutiny:mutiny\n"
+"            ]]>\n"
+"        </notes>\n"
+"        <gav regex=\"true\">^io\\.quarkus:quarkus-mutiny.*:.*$</gav>\n"
+"        <cpe>cpe:/a:mutiny:mutiny</cpe>\n"
+"    </suppress>\n"
+"    <suppress>\n"
+"        <notes>\n"
+"            <![CDATA[\n"
+"                Suppress the false positive CPE for Smallrye Mutiny to mutiny:mutiny\n"
+"            ]]>\n"
+"        </notes>\n"
+"        <gav regex=\"true\">^io\\.smallrye.reactive:mutiny.*:.*$</gav>\n"
+"        <cpe>cpe:/a:mutiny:mutiny</cpe>\n"
+"    </suppress>\n"
+"    <suppress>\n"
+"        <notes>\n"
+"            <![CDATA[\n"
+"                Suppress the false positive CPE for Smallrye Mutiny to mutiny:mutiny\n"
+"            ]]>\n"
+"        </notes>\n"
+"        <gav regex=\"true\">^io\\.smallrye.reactive:smallrye-mutiny.*:.*$</gav>\n"
+"        <cpe>cpe:/a:mutiny:mutiny</cpe>\n"
+"    </suppress>\n"
+"    <suppress>\n"
+"        <notes>\n"
+"            <![CDATA[\n"
+"                Suppress the false positive CPE for Smallrye Mutiny to mutiny:mutiny\n"
+"            ]]>\n"
+"        </notes>\n"
+"        <gav regex=\"true\">^io\\.smallrye.reactive:vertx-mutiny.*:.*$</gav>\n"
+"        <cpe>cpe:/a:mutiny:mutiny</cpe>\n"
+"    </suppress>\n"
+"    <suppress>\n"
+"        <notes>\n"
+"            <![CDATA[\n"
+"                Suppress the false positive CPE for graal-sdk to GraalVM (the JVM distribution)\n"
+"            ]]>\n"
+"        </notes>\n"
+"        <gav regex=\"true\">^org\\.graalvm\\.sdk:graal-sdk:.*$</gav>\n"
+"        <cpe>cpe:/a:oracle:graalvm</cpe>\n"
+"    </suppress>\n"
+"</suppressions>\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/security.adoc:368
+#, no-wrap
+msgid "Such a suppression list has to be carefully prepared and revisited from time to time. You should consider making individual suppressions time limited by adding an `until` tribute, for example: `<suppress until=\"2022-01-01Z\">...</suppress>`. It will let you doublecheck that only the same known false positives are reported when the suppression period expires, and after reviewing the report you can set a new expiry date.\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/security.adoc:369
+#, fuzzy, no-wrap
+msgid "Note link:https://jeremylong.github.io/DependencyCheck/dependency-check-maven/[OWASP Dependency Check Plugin] `6.5.3` or later should be used with Quarkus.\n"
 msgstr "注記 link:https://jeremylong.github.io/DependencyCheck/dependency-check-maven/[OWASP Dependency Check Plugin] `6.2.0` 以降をQuarkusと併用してください。"
 
 #~ msgid "OpenId Connect, JWT, OAuth2"
