Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-graphql-client-graph-ql-clients-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-graphql-client-graph-ql-clients-config.adoc.po
@@ -209,7 +209,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-smallrye-graphql-client-graph-ql-clients-config.adoc:134
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-smallrye-graphql-client-graph-ql-clients-config.adoc:115
