--- a/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
@@ -609,7 +609,7 @@ msgstr ""
 #: upstream/_guides/elasticsearch.adoc:329
 #, no-wrap
 msgid "Running the application"
-msgstr ""
+msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:332
