Add machine translation

--- a/l10n/po/ja_JP/_guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/container-image.adoc.po
@@ -96,18 +96,21 @@ msgstr "JVM デバッグ"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:46
+#, fuzzy
 msgid "There are cases where the built container image may need to have Java debugging conditionally enabled at runtime."
-msgstr ""
+msgstr "ビルドしたコンテナイメージでは、実行時に条件付きでJavaデバッグを有効にする必要がある場合があります。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:49
+#, fuzzy
 msgid "When the base image has not been changed (and therefore `ubi8/openjdk-11-runtime` or `ubi8/openjdk-17-runtime` is used), then the `quarkus.jib.jvm-arguments` configuration property can be used in order to make the JVM listen on the debug port at startup."
-msgstr ""
+msgstr "ベースイメージが変更されていない（したがって、 `ubi8/openjdk-11-runtime` または `ubi8/openjdk-17-runtime` が使用されている）場合、 `quarkus.jib.jvm-arguments` 設定プロパティを使用して、起動時に JVM がデバッグポートをリッスンするようにすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:51
+#, fuzzy
 msgid "The exact configuration is:"
-msgstr ""
+msgstr "正確な構成は"
 
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:55
@@ -117,13 +120,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:58
+#, fuzzy
 msgid "Other base images might provide launch scripts that enable debugging when an environment variable is set, in which case you would set than environment variable when launching the container."
-msgstr ""
+msgstr "他のベースイメージでは、環境変数が設定されているとデバッグが可能になる起動スクリプトが提供されている場合があるので、その場合はコンテナの起動時に環境変数を設定します。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:60
+#, fuzzy
 msgid "Finally, the `quarkus.jib.jvm-entrypoint` configuration property can be used to completely override the container entry point and can thus be used to either hard code the JVM debug configuration or point to a script that handles the details."
-msgstr ""
+msgstr "最後に、 `quarkus.jib.jvm-entrypoint` 構成プロパティを使用すると、コンテナのエントリポイントを完全にオーバーライドすることができるため、JVMのデバッグ構成をハードコードするか、詳細を処理するスクリプトを指定することができます。"
 
 #. type: Title ===
 #: upstream/_guides/container-image.adoc:62
@@ -199,8 +204,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:115
+#, fuzzy
 msgid "When using the buildpack container image extension it is strongly advised to avoid adding `quarkus.container-image.build=true` in your properties configuration as it might trigger nesting builds within builds. It's preferable to pass it as an option to the build command instead."
-msgstr ""
+msgstr "buildpack コンテナイメージエクステンションを使用する際には、プロパティ設定に `quarkus.container-image.build=true` を追加しないことを強くお勧めします。代わりにビルドコマンドのオプションとして渡すことをお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/container-image.adoc:116
