--- a/l10n/po/ja_JP/_guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis.adoc.po
@@ -1022,19 +1022,20 @@ msgstr ""
 #. type: Title ===
 #: upstream/_guides/redis.adoc:572
 #, fuzzy, no-wrap
-#| msgid "Creating Clients Programmatically"
 msgid "Providing Redis Hosts Programmatically"
 msgstr "プログラムによるクライアントの作成"
 
 #. type: Plain text
 #: upstream/_guides/redis.adoc:575
+#, fuzzy
 msgid "The `RedisHostsProvider` programmatically provides redis hosts. This allows for configuration of properties like redis connection password coming from other sources."
-msgstr ""
+msgstr "`RedisHostsProvider` はプログラムで redis のホストを提供します。これにより、他のソースから来るredisの接続パスワードなどのプロパティを設定することができます。"
 
 #. type: delimited block =
 #: upstream/_guides/redis.adoc:579
+#, fuzzy
 msgid "This is useful as it removes the need to store sensitive data in application.properties."
-msgstr ""
+msgstr "これにより、機密データをapplication.propertiesに保存する必要がなくなるので便利です。"
 
 #. type: delimited block -
 #: upstream/_guides/redis.adoc:593
@@ -1054,8 +1055,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis.adoc:596
+#, fuzzy
 msgid "The host provider can be used to configure the redis client like shown below"
-msgstr ""
+msgstr "ホストプロバイダーは、以下のようにredisクライアントの設定に使用できます。"
 
 #. type: delimited block -
 #: upstream/_guides/redis.adoc:599
