--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -697,8 +697,9 @@ msgstr "NVD CPEチームには、リストの更新と、Quarkus CPE名のエン
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:279
+#, fuzzy
 msgid "You can add `OWASP Dependency Check Plugin` to your project's `pom.xml` like this:"
-msgstr ""
+msgstr "プロジェクトの `pom.xml` に `OWASP Dependency Check Plugin` を加えると、このようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/security.adoc:295
@@ -741,7 +742,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:365
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
 "<suppressions xmlns=\"https://jeremylong.github.io/DependencyCheck/dependency-suppression.1.2.xsd\">\n"
@@ -805,7 +806,7 @@ msgid ""
 "        <cpe>cpe:/a:oracle:graalvm</cpe>\n"
 "    </suppress>\n"
 "</suppressions>\n"
-msgstr ""
+msgstr "&lt;?xml version=\"1.0\" encoding=\"UTF-8\"? &gt; &lt;suppressions xmlns=\"https://jeremylong.github.io/DependencyCheck/dependency-suppression.1.2.xsd\"&gt; &lt;!--これは、maven dependency check plugin用のCPE抑制ファイルです。エラー(false positive)で見つかった各CPEは、そのGAVを使って特定のjarに対して抑制する必要があります。 https://jeremylong.github.io/DependencyCheck/general/suppression.html -→ &lt;suppress&gt; &lt;notes&gt; &lt;![CDATA[ netty-tcnative-classes の誤検出 CPE を netty に抑制する ]]&gt; &lt;/notes&gt; &lt;gav regex=\"true\"&gt;^io\\.netty:netty-tcnative-classes *. :.*$&lt;/gav&gt; &lt;cpe&gt;cpe:/a:netty:netty&lt;/cpe&gt; &lt;/suppress&gt; &lt;suppress&gt; &lt;notes&gt; &lt;![CDATA[ Quarkus Mutinyの偽陽性CPEをmutiny:mutinyに抑制する ]]&gt; &lt;/notes&gt; &lt;gav regex=\"true\"&gt;^io\\.quarkus:quarkus-mutiny *. :.*$&lt;/gav&gt; &lt;cpe&gt;cpe:/a:mutiny:mutiny&lt;/cpe&gt; &lt;/suppress&gt; &lt;suppress&gt; &lt;notes&gt; &lt;![CDATA[ Smallrye Mutinyの偽陽性CPEをmutiny:mutinyに抑止する ]]&gt; &lt;/notes&gt; &lt;gav regex=\"true\"&gt;^io\\.smallrye.reactive:mutiny *. :.*$&lt;/gav&gt; &lt;cpe&gt;cpe:/a:mutiny:mutiny&lt;/cpe&gt; &lt;/suppress&gt; &lt;suppress&gt; &lt;notes&gt; &lt;![CDATA[ Smallrye Mutinyの偽陽性CPEをmutiny:mutinyに抑止する ]]&gt; &lt;/notes&gt; &lt;gav regex=\"true\"&gt;^io\\.smallrye.reactive:smallrye-mutiny *. :.*$&lt;/gav&gt; &lt;cpe&gt;cpe:/a:mutiny:mutiny&lt;/cpe&gt; &lt;/suppress&gt; &lt;suppress&gt; &lt;notes&gt; &lt;![CDATA[ Smallrye Mutinyの偽陽性CPEをmutiny:mutinyに抑止する ]]&gt; &lt;/notes&gt; &lt;gav regex=\"true\"&gt;^io\\.smallrye.reactive:vertx-mutiny *. :.*$&lt;/gav&gt; &lt;cpe&gt;cpe:/a:mutiny:mutiny&lt;/cpe&gt; &lt;/suppress&gt; &lt;suppress&gt; &lt;notes&gt; &lt;![CDATA[ Selpress the false positive CPE for graal-sdk to GraalVM (the JVM distribution) ]]&gt; &lt;/notes&gt; &lt;gav regex=\"true\"&gt;^org\\.graalvm\\.sdk:graal-sdk:.*$&lt;/gav&gt; &lt;cpe&gt;cpe:/a:oracle:graalvm&lt;/cpe&gt; &lt;/suppress&gt; &lt;/suppressions&gt; です。"
 
 #. type: delimited block -
 #: upstream/_guides/security.adoc:368
