--- a/l10n/po/ja_JP/_guides/stork-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/stork-reference.adoc.po
@@ -165,8 +165,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/stork-reference.adoc:77
+#, fuzzy
 msgid "If the provider is located in an extension, the configuration generator should be declared in the `annotationProcessorPaths` section of the runtime module using the default scope:"
-msgstr ""
+msgstr "プロバイダが拡張機能に配置されている場合、構成ジェネレータはランタイムモジュールの `annotationProcessorPaths` セクションでデフォルトのスコープを使用して宣言する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/stork-reference.adoc:87
@@ -403,8 +404,9 @@ msgstr "ロードバランサープロバイダを実装するには、プロジ
 
 #. type: delimited block =
 #: upstream/_guides/stork-reference.adoc:220
+#, fuzzy
 msgid "Similar to custom discovery providers, if the provider is located in an extension, the configuration generator should be declared in the `annotationProcessorPaths` section of the runtime module using the default scope."
-msgstr ""
+msgstr "カスタム ディスカバリー プロバイダと同様に、プロバイダが拡張機能に配置されている場合は、ランタイム モジュールの `annotationProcessorPaths` セクションでデフォルト スコープを使用して構成ジェネレータを宣言する必要があります。"
 
 #. type: Title ===
 #: upstream/_guides/stork-reference.adoc:222
