--- a/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
@@ -613,13 +613,13 @@ msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:332
+#, fuzzy
 msgid "Now let's run our application via Quarkus dev mode:"
-msgstr ""
+msgstr "それでは、Quarkusの開発モードでアプリケーションを実行してみましょう。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:339
 #, fuzzy
-#| msgid "add new fruits to the list via the 'Add fruit' form"
 msgid "You can add new fruits to the list via the following curl command:"
 msgstr "「フルーツを追加」フォームで新しいフルーツをリストに追加"
 
@@ -632,7 +632,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:346
 #, fuzzy
-#| msgid "search for fruits by name or color via the 'Search Fruit' form"
 msgid "And search for fruits by name or color via the flowing curl command:"
 msgstr "名前や色でフルーツを 'Search Fruit' フォームで検索することができます。"
 
