Add machine translation

--- a/l10n/po/ja_JP/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.7.2.Final released - Maintenance release'\n"
@@ -34,43 +34,55 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.7.2.Final released - Maintenance release'\n"
+"date: 2022-02-23\n"
+"tags: release\n"
+"synopsis: 2.7.2.Finalは、2.7リリーストレインの2回目のメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:11
+#, fuzzy
 msgid "It is our pleasure to announce the release of Quarkus 2.7.2.Final, our second maintenance release for our 2.7 release train."
-msgstr ""
+msgstr "Quarkus 2.7.2.Finalのリリースを発表できることを嬉しく思います。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:14
+#, fuzzy
 msgid "Some bugfixes are a bit more involved than what we usually include in maintenance releases, so if you encounter any issue upgrading, please report them with as many details as you can (and preferably with a reproducer) in https://github.com/quarkusio/quarkus/issues[our tracker]."
-msgstr ""
+msgstr "いくつかのバグフィックスは、通常のメンテナンスリリースに含まれているものよりも、もう少し複雑なものになっていますので、もし問題のアップグレードに遭遇した場合は、できるだけ詳細に（できれば再現者も含めて） link:https://github.com/quarkusio/quarkus/issues[私たちのトラッカー]に報告してください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:16
+#, fuzzy
 msgid "It should be a safe upgrade for anyone already using 2.7 though."
-msgstr ""
+msgstr "すでに2.7をお使いの方も安心してアップグレードできます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:18
+#, fuzzy
 msgid "If you are not using 2.7 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7 migration guide]."
-msgstr ""
+msgstr "すでに2.7を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:19
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "What's new"
-msgstr ""
+msgstr "最新情報"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:21
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kogito and OptaPlanner upgrades"
-msgstr ""
+msgstr "KogitoとOptaPlannerのバージョンアップ"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:24
+#, fuzzy
 msgid "Kogito and OptaPlanner have been upgraded respectively to 1.17.0.Final and 8.17.0.Final."
-msgstr ""
+msgstr "KogitoとOptaPlannerがそれぞれ1.17.0.Finalと8.17.0.Finalにアップグレードされました。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:25
@@ -80,8 +92,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:28
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.7.2.Final[the full changelog of 2.7.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.2.Final[2.7.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:29
