Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-testing.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-24 02:26+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -147,7 +147,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/security-testing.adoc:90
-msgid "The feature is only available for `@QuarkusTest` and will **not** work on a `@NativeImageTest`."
+#, fuzzy
+#| msgid "The feature is only available for `@QuarkusTest` and will **not** work on a `@NativeImageTest`."
+msgid "The feature is only available for `@QuarkusTest` and will **not** work on a `@NativeImageTest` or `@QuarkusIntegrationTest`."
 msgstr "この機能は `@QuarkusTest` でのみ利用可能で、 `@NativeImageTest` では動作 *しません*。"
 
 #. type: Title ===
