Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:16
@@ -56,7 +56,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:56
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:26
@@ -75,7 +75,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:27
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:35
@@ -95,7 +95,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:66
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:39
@@ -139,7 +139,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:59
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc:65
