--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1088,7 +1088,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc:569
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc:574
