--- a/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
@@ -191,7 +191,7 @@ msgstr ""
 #: upstream/_versions/main/guides/dev-services.adoc:121
 #, no-wrap
 msgid "Elasticsearch"
-msgstr ""
+msgstr "Elasticsearch"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:126
