--- a/l10n/po/ja_JP/_versions/main/guides/elasticsearch-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/elasticsearch-dev-services.adoc.po
@@ -101,7 +101,7 @@ msgstr ""
 #: upstream/_versions/main/guides/elasticsearch-dev-services.adoc:42
 #, no-wrap
 msgid "Setting the port"
-msgstr ""
+msgstr "ポートの設定"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch-dev-services.adoc:46
@@ -117,7 +117,7 @@ msgstr ""
 #: upstream/_versions/main/guides/elasticsearch-dev-services.adoc:49
 #, no-wrap
 msgid "Configuring the image"
-msgstr ""
+msgstr "イメージの設定"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch-dev-services.adoc:52
