--- a/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
@@ -499,7 +499,7 @@ msgstr "より高度な設定が必要な場合は、このガイドの最後に
 #: upstream/_versions/main/guides/elasticsearch.adoc:265
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch.adoc:270
